--- a/sam_games_index/templates/sam_games_index/games_index.html
+++ b/sam_games_index/templates/sam_games_index/games_index.html
@@ -7,9 +7,8 @@
       </div>
       <div class="row">
         <div class="col-md">
-
             <div class="card mx-auto" style="width: 18rem;">
-              <img src="{% static "sam_games_index/img/SamVrombinator.png" %}" class="card-img-top" alt="Sam Vrombinator">
+              <img src="{% static "sam_games_index/img/SamVrombinator.png" %}" class="card-img-top" alt="Sam Vrombinator" />
               <div class="card-body">
                 <h5 class="card-title">Sam Vrombinator</h5>
                 <p class="card-text">Jeu similaire au pendu pour bien apprendre son vocabulaire.</p>
