correction du bug formulaire

--- a/samvrombinator/templates/samvrombinator/manage.html
+++ b/samvrombinator/templates/samvrombinator/manage.html
@@ -40,6 +40,7 @@
                         <div class="row mt-2">
                             <a href="./manage" class="btn btn-primary mr-1 mb-1">Nouveau</a>
                             <input class="btn btn-success mr-1 mb-1" type="submit" value="Enregistrer" name="Enregistrer">
+                            <a class="btn btn-secondary mr-1 mb-1" href="./?voc_selected={{ form.voc_name.value|urlencode }}" class="btn btn-primary mr-1 mb-1">Tester / jouer</a>
                             <input class="btn btn-danger mr-1 mb-1" type="submit" value="Supprimer" name="Supprimer">
                         </div>
                     </form>
