--- a/samcalculator/static/samcalculator/calculs.css
+++ b/samcalculator/static/samcalculator/calculs.css
@@ -31,6 +31,7 @@ body {
   border-color: silver;
   border-radius: 4px;
   border-style: solid;
+  line-height: 120px;
 }
 
 #timer div:first-child{
