--- a/samcalculator/static/samcalculator/calculs.css
+++ b/samcalculator/static/samcalculator/calculs.css
@@ -22,21 +22,25 @@ body {
   font-size: 160px;
   position: relative;
   height: 180px;
-}
-
-#timer div{
-  position: absolute;
   padding: 8px 14px 20px 14px;
   border-width: 5px;
   border-color: silver;
   border-radius: 4px;
   border-style: solid;
+  background-color: black;
+}
+
+#timer div{
+  position: absolute;
+  transform: translate(-50%, 0);
+  left: 50%;
+  height: 120px;
   line-height: 120px;
+
 }
 
 #timer div:first-child{
   color: #202020;
-  background-color: black;
 }
 
 #timer div:last-child{
@@ -118,12 +122,14 @@ input.response{
 }
 #timer-container{
   margin-top: 40px;
+  margin-bottom: 20px;
   display: inherit;
 }
 #timer{
   width: 445px;
   margin-left: auto;
   margin-right: auto;
+  height: 120px
 }
 .col{
   display: inline-block;
