--- a/samcalculator/static/samcalculator/calculs.css
+++ b/samcalculator/static/samcalculator/calculs.css
@@ -1,3 +1,18 @@
+#menu{
+  text-align: right;
+  font-size: 18px;
+  font-family: arial;
+}
+#menu ul{
+  list-style-type: none;
+  margin-top: 2px;
+  margin-bottom: 0;
+}
+#menu li{
+  display: inline-block;
+  margin-left: 10px;
+}
+
 .calcul{
   line-height: 46px;
   background-color: black;
