--- a/sam_games_index/templates/sam_games_index/games_index.html
+++ b/sam_games_index/templates/sam_games_index/games_index.html
@@ -15,11 +15,11 @@
               </div>
             </div>
             <div class="card" style="max-width: 18rem;">
-              <img src="{% static "sam_games_index/img/SamCalculator.png" %}" class="card-img-top" alt="Sam Vrombinator" />
+              <img src="{% static "sam_games_index/img/samCalculator.png" %}" class="card-img-top" alt="Sam Vrombinator" />
               <div class="card-body">
                 <h5 class="card-title">Sam Calculator</h5>
                 <p class="card-text">Un jeu explosif pour calculer plus vite.</p>
-                <a href="{% url 'samcalculator:game' %}" class="btn btn-primary">Jouer</a>
+                <a href="{% url 'samcalculator:options' %}" class="btn btn-primary">Jouer</a>
               </div>
             </div>
         </div>
